# click2pptx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  click2pptx.spec  pyproject.toml
src/click2pptx/: __main__.py  generate_clickable_pptx.py
tests/: test_generate_clickable_pptx.py
tests/test_data/: carte.html
