[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "click2pptx"
version = "0.1.0"
description = "Convert a Freeplane HTML export into a clickable PPTX"
authors = [{name="Unknown"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "python-pptx"
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[tool.black]
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "--cov=click2pptx --cov-report=term-missing"

[project.scripts]
click2pptx = "click2pptx.generate_clickable_pptx:main"
